--- a/index.html
+++ b/index.html
@@ -5,24 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Beranda | Teracinema</title>
 
-    <link rel="stylesheet" href="/style/halaman_utama.css" />
+    <link rel="stylesheet" href="./style/halaman_utama.css" />
   </head>
   <body>
     <header>
       <nav>
         <div>
           <img
-            src="/assets/images/logo-teracinema.svg"
+            src="./assets/images/logo-teracinema.svg"
             alt="logo-teracinema"
             width="24"
           />
-          <h1><a href="/index.html">Teracinema</a></h1>
+          <h1><a href="./index.html">Teracinema</a></h1>
         </div>
         <div class="nav-menu">
           <ul>
-            <li><a href="/halaman_tabel.html">Rekomendasi</a></li>
+            <li><a href="./halaman_tabel.html">Rekomendasi</a></li>
             <li>
-              <a href="/halaman_formulir.html">Masukan dan Saran</a>
+              <a href="./halaman_formulir.html">Masukan dan Saran</a>
             </li>
           </ul>
         </div>
@@ -40,41 +40,41 @@
           <section class="featured-movies">
             <div class="title-featured">
               <h2>Film Terbaru</h2>
-              <a href="/halaman_tabel.html">Lihat Rekomendasi Lainnya</a>
+              <a href="./halaman_tabel.html">Lihat Rekomendasi Lainnya</a>
             </div>
             <div class="container">
               <div
                 class="box box-1"
                 style="
-                  background-image: url(../assets/images/cover-movie-1.jpg);
+                  background-image: url(./assets/images/cover-movie-1.jpg);
                 "
                 data-text="Film1"
               ></div>
               <div
                 class="box box-2"
                 style="
-                  background-image: url(../assets/images/cover-movie-2.jpg);
+                  background-image: url(./assets/images/cover-movie-2.jpg);
                 "
                 data-text="Film2"
               ></div>
               <div
                 class="box box-3"
                 style="
-                  background-image: url(../assets/images/cover-movie-3.jpg);
+                  background-image: url(./assets/images/cover-movie-3.jpg);
                 "
                 data-text="Film3"
               ></div>
               <div
                 class="box box-4"
                 style="
-                  background-image: url(../assets/images/cover-movie-4.jpeg);
+                  background-image: url(./assets/images/cover-movie-4.jpeg);
                 "
                 data-text="Film4"
               ></div>
               <div
                 class="box box-5"
                 style="
-                  background-image: url(../assets/images/cover-movie-5.jpg);
+                  background-image: url(./assets/images/cover-movie-5.jpg);
                 "
                 data-text="Film5"
               ></div>
@@ -110,9 +110,9 @@
           </p>
           <div class="nav-menu-aside">
             <ul>
-              <li><a href="/halaman_tabel.html">Rekomendasi</a></li>
+              <li><a href="./halaman_tabel.html">Rekomendasi</a></li>
               <li>
-                <a href="/halaman_formulir.html">Masukan dan Saran</a>
+                <a href="./halaman_formulir.html">Masukan dan Saran</a>
               </li>
             </ul>
           </div>
