--- a/halaman_tabel.html
+++ b/halaman_tabel.html
@@ -5,30 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rekomendasi | Teracinema</title>
 
-    <link rel="stylesheet" href="/style/halaman_tabel.css" />
+    <link rel="stylesheet" href="./style/halaman_tabel.css" />
   </head>
   <body>
     <header>
       <nav>
         <div>
           <img
-            src="/assets/images/logo-teracinema.svg"
+            src="./assets/images/logo-teracinema.svg"
             alt="logo-teracinema"
             width="24"
           />
-          <h1><a href="/index.html">Teracinema</a></h1>
+          <h1><a href="./index.html">Teracinema</a></h1>
         </div>
         <div class="nav-menu">
           <ul>
             <li>
               <a
-                href="/halaman_tabel.html"
+                href="./halaman_tabel.html"
                 style="color: black; font-weight: 700"
                 >Rekomendasi</a
               >
             </li>
             <li>
-              <a href="/halaman_formulir.html">Masukan dan Saran</a>
+              <a href="./halaman_formulir.html">Masukan dan Saran</a>
             </li>
           </ul>
         </div>
